# e172_sdl_impl

./: CMakeLists.txt  README.md  magura.yaml  sdl_implementation.cmake
src/: audioprovider.cpp  audioprovider.h  eventprovider.cpp  eventprovider.h  graphicsprovider.cpp  graphicsprovider.h  renderer.cpp  renderer.h  sdlaudioprovider.cpp  sdleventhandler.cpp  sdleventhandler.h  sdleventprovider.cpp  sdleventprovider.h  sdlgraphicsprovider.cpp  sdlgraphicsprovider.h  sdlrenderer.cpp  sdlrenderer.h  spm.cpp  spm.h
src/effects/: anaglyph.cpp  anaglyph.h  visualeffect.cpp  visualeffect.h
src/private/: initsdl.cpp  initsdl.h  spm.cpp  spm.h
